# gxml-web

./: .gitignore  .gitmodules  LICENSE  README.md  dev.sh  nginx-prod.sh  prod.sh  pyproject.toml  start.sh
.github/: copilot-instructions.md
desktop/: README.md  dev.ps1  package-lock.json  package.json  temp_test.xml
desktop/electron/: main.js  preload.js
docs/: cross-platform-architecture.md  full-gxml-browser-options.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/__tests__/: api.test.js  binaryGeometry.test.js  errorStates.test.js  keyboardShortcuts.test.js  selection.test.js  setup.js  userFlows.test.js
frontend/src/components/: AxisGizmo.css  AxisGizmo.jsx  DetailsPanel.css  DetailsPanel.jsx  EditorPanel.css  EditorPanel.jsx  GeometrySpreadsheet.css  GeometrySpreadsheet.jsx  OptionsPanel.css  OptionsPanel.jsx  PerfStatsHUD.css  PerfStatsHUD.jsx  Resizer.css  Resizer.jsx  SelectionModeBar.css  SelectionModeBar.jsx  SnapToolbar.css  SnapToolbar.jsx  ViewportPanel.css  ViewportPanel.jsx
frontend/src/hooks/: useThreeScene.js
frontend/src/stores/: appStore.js  viewportStore.js
frontend/src/styles/: App.css  index.css
frontend/src/utils/: apiConfig.js  binaryGeometry.js  browserSolver.js  sceneRegistry.js  webgpuShaders.js
misc/: gxml-web.code-workspace
scripts/: dev.sh  nginx-dev.sh  prod.sh
src/gxml_web/: __init__.py  app.py  binary_render_engine.py  json_render_engine.py  timing_utils.py  xsd_parser.py
src/gxml_web/static/: index.html  main.js  style.css
(+16 files in other folders)
